chore: add resharing
